<resources>
    <string name="app_name">OAS PAY</string>
    <string name="main_foot_1">المتجر</string>
    <string name="main_foot_2">المعلومات </string>
    <string name="main_foot_3">الخاص بك </string>
    <string name="common_head_title">الأسطورة اونلاين العربية</string>
    <string name="fragment_shop_function_prop">جميع الأدوات</string>
    <string name="fragment_shop_function_order">طلبياتي</string>
    <string name="fragment_shop_function_charge">شحن اللعبة</string>
    <string name="fragment_shop_function_capture">مسح الكود</string>
    <string name="fragment_shop_category_newest">البضائع الجديدة</string>
    <string name="fragment_shop_category_hot">الموصى به</string>
    <string name="fragment_shop_category_review">ماتم استعراضة </string>
    <string name="fragment_shop_category_more">المزيد</string>
    <string name="fragment_shop_category_review_charge">شراء</string>
    <string name="search_title_sub1">إلغاء</string>
    <string name="search_title_sub2">تأكيد</string>
    <string name="search_title_sub3">فضلاً قم بإدخال كلمات ذات صلة بالبحث الذي ترغب القيام به</string>
    <string name="search_title_sub4">العروض الأكثر طلباً والموصى بها</string>
    <string name="search_title_sub5">سجل البحث</string>
    <string name="search_title_sub6">تفريغ سجل البحث</string>
    <string name="search_title_sub7">لم يتم العثور عليه ، قم بتغيير الكلمة وأعد المحاولة.</string>
    <string name="product_list_title">قائمة البضائع</string>
    <string name="product_details_title">تفاصيل البضائع</string>
    <string name="product_details_price">السعر:</string>
    <string name="order_details_title">تفاصيل الطلبية</string>
    <string name="order_details_id">رقم الطلبية:</string>
    <string name="order_details_label_1">تبديل الكود:</string>
    <string name="order_details_label_2">نسخ</string>
    <string name="order_details_label_3">حالة الطلبية:</string>
    <string name="order_details_label_4">وقت الطلبية:</string>
    <string name="order_details_label_5">وقت الدفع:</string>
    <string name="order_details_label_6">طريقة الدفع:</string>
    <string name="order_details_label_7">تمت الطلبية بنجاح</string>
    <string name="order_details_label_8">في إنتظار استكمال الدفع</string>
    <string name="order_details_label_9">الدفع</string>
    <string name="order_details_label_10">الإجمالي:</string>
    <string name="pay_package_list_title">شحن الأسطورة اونلاين العربية</string>
    <string name="pay_package_list_sub1">شحن الحساب:</string>
    <string name="pay_package_list_sub2">باقة الألماس:</string>
    <string name="pay_package_list_sub3">فضلاً قم بإختيار نوع الشخصية الخاصة بك في اللعبة </string>
    <string name="pay_package_list_sub4">فضلاً قم بإختيار السيرفر</string>
    <string name="pay_package_list_sub5">فضلاً قم بإختيار الشخصية</string>
    <string name="pay_package_list_sub6">المبلغ المطلوب:</string>
    <string name="pay_package_list_sub7">الدفع فوراً</string>
    <string name="order_list_title_sub2">طلبيات الشهر الحالي</string>
    <string name="order_list_title_sub1">سجل الطلبيات</string>
    <string name="order_list_item_label5">لا يوجد </string>
    <string name="order_list_item_label6">الذهاب للتسوق</string>
    <string name="order_list_item_label2">متابعة الدفع</string>
    <string name="order_list_item_label3">إلغاء الطلبية</string>
    <string name="order_list_item_label4">حذف</string>
    <string name="capture_scan_text2_2">سيتم وضع كود الـ QR في المربع ، وستتمكن من مسحة تلقائياً</string>
    <string name="capture_scan_text2_3">إدخال رقم الطلبية</string>
    <string name="capture_scan_text2_4">ارسال </string>
    <string name="fragment_mine_head_login">تسجيل الدخول</string>
    <string name="login_edit_user">الحساب:</string>
    <string name="login_edit_password">كلمة المرور:</string>
    <string name="login_edit_user_hint">إسم المستخدم / البريد</string>
    <string name="login_edit_password_hint">إدخال 6-15 حرف ، رقم ، رمز</string>
    <string name="login_other_findpwd">إستعادة كلمة المرور</string>
    <string name="login_other_rule">شروط خدمات المستخدم</string>
    <string name="login_other_loginstyle">تسجيل دخول حساب الطرف الثالث</string>
    <string name="login_register">التسجيل</string>
    <string name="fragment_news_title">تفاصيل</string>
    <string name="fragment_mine_head_title">البيانات الشخصية</string>
    <string name="fragment_mine_head_list_2">إزالة الصورة من الذاكرة التلقائية</string>
    <string name="fragment_mine_head_list_3">من نحن</string>
    <string name="fragment_mine_head_exit">الخروج من الحساب الحالي</string>
    <string name="app_version_1">الإصدار الحالي</string>
    <string name="app_version_2">إكتشاف الإصدار الجديدة</string>
    <string name="app_version_3">الإصدار الجديد</string>
    <string name="app_version_4">حجم الإصدار الجديدة</string>
    <string name="app_version_5">التحميل يحتاج إلى :</string>
    <string name="app_version_6">محتوى التحديث</string>
    <string name="app_version_7">التحديث فوراً</string>
    <string name="app_version_8">في وقتاً لاحق</string>
    <string name="order_details_label_11">تم نسخ المحتوى إلى الحافظة</string>
    <string name="order_list_item_label8">بعد القيام بإلغاء الطلبية ، فإنه سيتم حذفة</string>
    <string name="order_list_item_label7">سيتم حذف هذة الطلبية</string>
    <string name="capture_scan_text4">الحساب الذي قمت بتسجيل الدخول إلية غير متطابق مع الحساب الذي في إنتظار إستكمال الدفع منه ، هل  تريد إعادة تسجيل الدخول؟</string>
    <string name="capture_scan_text3">غير معترف به</string>
    <string name="capture_scan_text5">خطأ في الإدخال ، فضلاً قم بالإدخال مرة اخرى .</string>
    <string name="fragment_mine_head_list_2_1">هل تريد تأكيد حذف الذاكرة التلقائية ؟</string>
    <string name="common_nowifi">خطأ في الإتصال بالشبكة</string>
    <string name="about_content">طريقة الدفع oas pay هي طريقة دفع خاصة بالموقع الرسمي لـ oasis games ، هذه الطريقة تجعل الشراء اكثر مرونة ، كما يمكنك التمتع بتجربة الخصومات الخاصة . </string>
    <string name="google_error_notice6">الانتهاء من الدفع </string>
    <string name="order_list_item_label9"> لم يتم حفظ هذه الطلبية !</string>
    <string name="order_list_item_label10">تم الانتهاء من دفع هذه الطلبية !</string>
    <string name="google_error_notice1"> فشل تهيئة الدفع ، يرجى المحاولة مرة أخرى !</string>
    <string name="google_error_notice2"> فشل الحصول على الباقة ، يرجى المحاولة مرة أخرى !</string>
    <string name="google_error_notice3">فشل الحصول على المنتج ، يرجى المحاولة مرة أخرى !</string>
    <string name="google_error_notice4">لم يتم العثور على الباقة ، يرجى مراجعة المكونات !</string>
    <string name="google_error_notice5">فشل بيانات التحقق ، يرجى المحاولة مرة أخرى !</string>
    <string name="common_error_notice_2000">خطأ في إتصال الشبكة ، يرجى المحاولة مرة أخرى!</string>

    <string name="capture_scan_text6">خطأ في الأحرف ،فضلاً قم بإدخال الأرقام العربية الخاصة بنمط الطلبية</string>
    <string name="fragment_mine_head_list_2_2">لقد تم مسح الذاكرة التلقائية</string>
    <string name="login_title_sub">حساب Oasis</string>
    <string name="pay_package_list_sub8">لا توجد شخصية</string>
    <string name="common_retry">بإعادة المحاولة</string>
    <string name="common_error_notice_4">اسم المستخدم او كلمة المرور تحتوي على خطأ</string>
    <string name="main_notice_1">قم بالنقر مرة أخرى للخروج من البرنامج</string>
    <string name="order_details_label_12">في طور توليد الأكواد التي تم تبديلها</string>
    <string name="google_error_notice7">لقد حدث خلل في هذة الطلبية ، يرجى التواصل مع خدمة العملاء !</string>

    <string name="order_list_item_label11">لا يوجد مزيد</string>
    <string name="capture_scan_text7">طلبية خاطئة ، هدة الطلبية هي طلبية App Store</string>
    <string name="capture_scan_text8">لا يمكنك الدفع ، هدة الطلبية هي طلبية App Store</string>


    <string name="fragment_shop_function_orther">كنا متطلعا</string>
    <string name="order_list_item_label12">هذا المنتج غير موجود حاليا !</string>
    <string name="common_error_notice_24">تم إيقاف خدمة الشحن من الحساب الخاص بك مؤقتاً</string>
    <string name="common_error_notice_25">لقد وصل عدد بنود الشحن اليومي او مبلغ الشحن اليومي الخاص بحسابك إلى الحد الاقصى ، من اجل الحفاظ على الامآن الخاص بحسابك ، يرجى متابعة الشحن غذاً</string>
    <string name="common_error_notice_26">لقد وصل عدد بنود الشحن اليومي او مبلغ الشحن اليومي الخاص بحسابك إلى الحد الاقصى ، من اجل الحفاظ على الامآن الخاص بحسابك ، يرجى متابعة الشحن غذاً</string>
    <string name="google_error_notice8">فشل الدفع ، الرجاء المحاولة مرة أخرى لاحقاً</string>
</resources>
