<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background_all_page">

    <include layout="@layout/common_head"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title_sub"
                android:textColor="@color/common_font_color_49a81a"
                android:textSize="@dimen/common_font_size_16"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/common_content_margin_30"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/common_content_margin_20"
                android:layout_marginLeft="@dimen/common_content_margin_20">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_edit_height"
                    android:layout_marginTop="@dimen/common_content_margin_15">

                    <TextView
                        android:id="@+id/login_edit_label_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/login_edit_user"
                        android:textColor="@color/common_font_color_000000"
                        android:textSize="@dimen/common_font_size_14"
                        android:layout_centerVertical="true"/>
                    <EditText
                        android:id="@+id/login_edit_user"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_edit_user_hint"
                        android:inputType="text|textEmailAddress"
                        android:textColor="@color/common_font_color_000000"
                        android:textSize="@dimen/common_font_size_12"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/login_edit_label_user"
                        android:gravity="right|center_vertical"
                        android:paddingRight="@dimen/common_content_margin_5"
                        android:background="@null"
                        android:singleLine="true"/>
                    <TextView
                        android:id="@+id/login_edit_moreuser"
                        android:layout_width="@dimen/common_head_back_height"
                        android:layout_height="@dimen/common_head_back_height"
                        android:layout_alignParentLeft="true"
                        android:background="@mipmap/common_arrow_down"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:onClick="buttonOnClick"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dip"
                        android:background="@color/common_font_color_49a81a"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_edit_height"
                    android:layout_marginTop="@dimen/common_content_margin_15">

                    <TextView
                        android:id="@+id/login_edit_label_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/login_edit_password"
                        android:textColor="@color/common_font_color_000000"
                        android:textSize="@dimen/common_font_size_14"
                        android:layout_centerVertical="true"/>
                    <EditText
                        android:id="@+id/login_edit_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_edit_password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/common_font_color_000000"
                        android:textSize="@dimen/common_font_size_12"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/login_edit_label_password"
                        android:gravity="right|center_vertical"
                        android:paddingRight="@dimen/common_content_margin_5"
                        android:background="@null"
                        android:singleLine="true"
                        android:maxLength="15"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dip"
                        android:background="@color/common_font_color_49a81a"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/login_btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/fragment_mine_exit_height"
                android:text="@string/fragment_mine_head_login"
                android:background="@drawable/common_bg_a5a4a4"
                android:layout_marginTop="@dimen/common_content_margin_30"
                android:layout_marginLeft="@dimen/common_content_margin_50"
                android:layout_marginRight="@dimen/common_content_margin_50"
                android:layout_marginBottom="@dimen/common_content_margin_10"
                android:gravity="center"
                android:textSize="@dimen/common_font_size_16"
                android:textColor="@color/common_font_color_ffffff"
                android:clickable="true"
                android:onClick="buttonOnClick"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_height"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/login_btn_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/common_content_margin_20"
                    android:text="@string/login_other_rule"
                    android:textSize="@dimen/common_font_size_12"
                    android:textColor="@color/common_font_color_000000"
                    android:clickable="true"
                    android:onClick="buttonOnClick"/>
                <TextView
                    android:id="@+id/login_btn_find_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/common_content_margin_20"
                    android:text="@string/login_other_findpwd"
                    android:textSize="@dimen/common_font_size_12"
                    android:textColor="@color/common_font_color_000000"
                    android:clickable="true"
                    android:onClick="buttonOnClick"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_height"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/common_content_margin_30">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="@color/common_list_item_divide_bg"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/login_other_loginstyle"
                    android:textSize="@dimen/common_font_size_12"
                    android:textColor="@color/common_font_color_868585"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="@color/common_list_item_divide_bg"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/common_content_margin_30"
                android:layout_marginBottom="@dimen/common_content_margin_20">
                <TextView
                    android:id="@+id/login_btn_otherstyle_facebook"
                    android:layout_width="@dimen/login_style_btn_height"
                    android:layout_height="@dimen/login_style_btn_height"
                    android:background="@drawable/login_style_facebook_selector"
                    android:layout_margin="@dimen/common_content_margin_5"
                    android:clickable="true"
                    android:onClick="buttonOnClick"/>
                <TextView
                    android:id="@+id/login_btn_otherstyle_google"
                    android:layout_width="@dimen/login_style_btn_height"
                    android:layout_height="@dimen/login_style_btn_height"
                    android:background="@drawable/login_style_google_selector"
                    android:layout_margin="@dimen/common_content_margin_5"
                    android:clickable="true"
                    android:onClick="buttonOnClick"/>
            </LinearLayout>
            <TextView
                android:id="@+id/login_btn_register"
                android:layout_width="@dimen/login_register_btn_width"
                android:layout_height="@dimen/login_register_btn_height"
                android:background="@drawable/common_button_2_selector"
                android:layout_margin="@dimen/common_content_margin_10"
                android:clickable="true"
                android:onClick="buttonOnClick"
                android:gravity="center"
                android:text="@string/login_register"
                android:textColor="@color/common_font_color_49a81a"
                android:textSize="@dimen/common_font_size_12"/>
        </LinearLayout>
    </ScrollView>
        <include layout="@layout/common_waiting_anim"/>
    </FrameLayout>
</LinearLayout>