<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fragment_mine_head_bg_height"
        android:background="@mipmap/fragment_mine_head_bg"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_mine_head_title"
            android:textColor="@color/common_font_color_ffffff"
            android:textSize="@dimen/common_font_size_16"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/common_content_margin_15"/>
        <TextView
            android:id="@+id/fragment_mine_head_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/common_font_color_ffffff"
            android:textSize="@dimen/common_font_size_12"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/common_content_margin_10"/>

        <LinearLayout
            android:id="@+id/fragment_mine_head_touxiang"
            android:layout_width="@dimen/fragment_mine_head_bg_touxiang_height"
            android:layout_height="@dimen/fragment_mine_head_bg_touxiang_height"
            android:layout_above="@id/fragment_mine_head_username"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/common_content_margin_10"
            android:clickable="true"
            android:onClick="onClickView">
            <ImageView
                android:layout_width="@dimen/fragment_mine_head_bg_touxiang_height"
                android:layout_height="@dimen/fragment_mine_head_bg_touxiang_height"
                android:visibility="gone"/>
            <TextView
                android:layout_width="@dimen/fragment_mine_head_bg_touxiang_height"
                android:layout_height="@dimen/fragment_mine_head_bg_touxiang_height"
                android:background="@mipmap/fragment_mine_head_bg_touxiang"
                android:gravity="center"
                android:text="@string/fragment_mine_head_login"
                android:textSize="@dimen/common_font_size_14"
                android:textColor="@color/common_font_color_398903"/>
        </LinearLayout>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/fragment_mine_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/fragment_mine_exit"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/fragment_mine_exit_height"
                android:background="@drawable/common_button_1_selector"
                android:layout_marginTop="@dimen/common_content_margin_20"
                android:layout_marginRight="@dimen/main_foot_height"
                android:layout_marginLeft="@dimen/main_foot_height"
                android:text="@string/fragment_mine_head_exit"
                android:textSize="@dimen/common_font_size_16"
                android:textColor="@color/common_font_color_ffffff"
                android:gravity="center"
                android:clickable="true"
                android:onClick="onClickView"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
